#2 updated UI for enter IP

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MouseRemote</string>
+    <string name="enterIp">Enter IP of Destination</string>
+    <string name="enterPort">Enter Port of Destination Server</string>
 </resources>
