#2 updated UI for enter Port

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">MouseRemote</string>
     <string name="enterIp">Enter IP of Destination</string>
     <string name="enterPort">Enter Port of Destination Server</string>
+    <string name="btnConnect">Connect</string>
 </resources>
