--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="rightBtn">Right\nButton</string>
     <string name="hrLine">__________</string>
     <string name="wheelString">Scroll Wheel</string>
+    <string name="turn_wifi_on">Turn Wifi On</string>
+    <string name="turn_wifi_off">Turn Wifi Off</string>
 </resources>
