#10 added base design and permissions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="wheelString">Scroll Wheel</string>
     <string name="turn_wifi_on">Turn Wifi On</string>
     <string name="turn_wifi_off">Turn Wifi Off</string>
+    <string name="enter_manual_ip">Enter Manual IP</string>
 </resources>
