--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="turn_wifi_on">Turn Wifi On</string>
     <string name="turn_wifi_off">Turn Wifi Off</string>
     <string name="enter_manual_ip">Enter Manual IP</string>
+    <string name="IPinput">_ _ _ . _ _ _ . _ _ _ . _ _ _</string>
 </resources>
