--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="turn_wifi_off">Turn Wifi Off</string>
     <string name="enter_manual_ip">Enter Manual IP</string>
     <string name="IPinput">_ _ _ . _ _ _ . _ _ _ . _ _ _</string>
+    <string name="skrinternationals">©SKRinternationals</string>
+    <string name="instruction">Waiting for <b>server.exe</b> to run on Host device… <br/> Download it from <br/> <i>https://blahblah.blah.blah</i></string>
 </resources>
