Updating heavily on functionality end (#11)
* #10 updated scroll pad UI

* #10 updated Colours

* #10 added wifi toggle button

* #10 added wifi toggle button

* #10 added base design and permissions

* #10 updated main UI

* #10 helper files and manual input

* #10 added wifi states features (not working)

* #10 Trying "check connectivity state"

* #10 Restart

* #10 added automatic connection feature

* #10 updated waiting page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,10 @@
     <string name="rightBtn">Right\nButton</string>
     <string name="hrLine">__________</string>
     <string name="wheelString">Scroll Wheel</string>
+    <string name="turn_wifi_on">Turn Wifi On</string>
+    <string name="turn_wifi_off">Turn Wifi Off</string>
+    <string name="enter_manual_ip">Enter Manual IP</string>
+    <string name="IPinput">_ _ _ . _ _ _ . _ _ _ . _ _ _</string>
+    <string name="skrinternationals">©SKRinternationals</string>
+    <string name="instruction">Waiting for <b>server.exe</b> to run on Host device… <br/> Download it from <br/> <i>https://blahblah.blah.blah</i></string>
 </resources>
