#3 fixed delete button issue

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,4 +76,5 @@
     <string name="_3">3</string>
     <string name="tab">Tab</string>
     <string name="caps">Caps</string>
+    <string name="delete">delete</string>
 </resources>
