--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MouseRemote</string>
+    <string name="app_name">TouchDroid</string>
     <string name="enterIp">Enter IP of Destination</string>
     <string name="enterPort">Enter Port of Destination Server</string>
     <string name="btnConnect">Connect</string>
@@ -12,13 +12,13 @@
     <string name="turn_wifi_off">Turn Wifi Off</string>
     <string name="enter_manual_ip">Enter Manual IP</string>
     <string name="IPinput">_ _ _ . _ _ _ . _ _ _ . _ _ _</string>
-    <string name="skrinternationals">Powered BY <b>©SKRinternationals</b></string>
+    <string name="copyright">Powered BY <b>©The Akshay</b><br /> Partnered with <b>©SKRInternationals</b></string>
     <string name="instruction">Waiting for <b>MouseRemoteServer.exe</b> to run on Host device… <br /> Download it from <br /> https://github.com/Akshayaap/MouseRemoteServer</string>
     <string name="scan">Scan</string>
-    <string name="up">^</string>
-    <string name="down">v</string>
-    <string name="right"><![CDATA[>]]></string>
-    <string name="left"><![CDATA[<]]></string>
+    <string name="up">↑</string>
+    <string name="down">↓</string>
+    <string name="right">→</string>
+    <string name="left">←</string>
     <string name="prtscr">Prt Scr</string>
     <string name="insert">Ins</string>
     <string name="dot">.</string>
@@ -49,7 +49,7 @@
     <string name="h">H</string>
     <string name="d">D</string>
     <string name="backslash">\\</string>
-    <string name="sq_braces_open">[</string>
+    <string name="sq_braces_open">[<br />{</string>
     <string name="sq_braces_close">]</string>
     <string name="q">Q</string>
     <string name="t">T</string>
